<resources>
    <string name="app_name">OMRChecker</string>

    <!-- 폴더 리스트 메인 화면 -->
    <string name="folder_list_delete_title">선택한 과목을 삭제할까요?</string>
    <string name="folder_list_delete_sub_title">테스트도 모두 삭제돼요</string>

    <!-- 테스트 생성 화면-->
    <string name="omr_make_back_title">이전 화면으로 돌아갈까요?</string>
    <string name="omr_make_back_sub_title">저장되지 않은 내용은 삭제돼요</string>

    <!--  OMR 리스트 창  -->
    <string name="text_omr_ongoing">진행중인 테스트</string>
    <string name="text_omr_cnt">%d회차</string>
    <string name="text_omr_list_ongoing">진행중</string>

    <!-- OMR Input -->
    <string name="omr_input_next">다음</string>
    <string name="omr_input_title">푼 문제</string>
    <string name="omr_test_title_default">시험명</string>
    <string name="omr_subject_title_default">과목명</string>
    <string name="omr_input_cnt">%1$s / %2$s</string>

    <string name="omr_answer_title">정답 기입</string>
    <string name="omr_answer_cnt">%1$s / %2$s</string>

    <!-- OMR 문제 입력 창 -->
    <string name="omr_progress_problem">문제 풀기</string>
    <string name="omr_progress_answer">정답 기입</string>
    <string name="omr_progress_result">결과 확인</string>
    <string name="omr_progress_warn_title">풀이를 모두 입력하지 않았어요</string>
    <string name="omr_progress_warn_sub_title">문제 풀이를 완료할까요?</string>

    <!-- OMR 답안 입력 창 -->
    <string name="omr_answer_warn_title">답안을 모두 입력하지 않았어요</string>
    <string name="omr_answer_warn_sub_title">답안 작성을 완료할까요?</string>
    <string name="omr_score_warn_title">점수를 모두 입력하지 않았어요</string>
    <string name="omr_answer_score_warn_title">점수 &amp; 답안을 모두 입력하지 않았어요</string>
    <string name="omr_score_input">점수 입력</string>
    <string name="omr_score_input_all">점수 한번에 입력하기</string>
    <string name="omr_score_input_all_sub">소수점 한 자리까지 입력 가능해요</string>
    <string name="omr_score_input_clear">모두 지우기</string>
    <string name="omr_score_unit">점</string>
    <string name="omr_score_input_all_warn">점수를 입력해주세요</string>

    <string name="omr_temp_save_title">임시저장 할까요?</string>
    <string name="omr_temp_save_sub_title">취소를 누를 시 입력된 내용이 초기화돼요</string>

    <!-- OMR 결과 확인 창-->
    <string name="omr_result_reset">다시 풀기</string>

    <string name="header_omr_list">임시 폴더명</string>
    <string name="header_setting_omr">새 테스트 만들기</string>

    <string name="omr_list_date_temp">진행중 %s</string>
    <string name="omr_list_cnt">%d 회차</string>
    <string name="omr_list_correct_ea">&lt;font color="#000000">정답 %d&lt;/font> &lt;font color="#9696A5">/&lt;/font> &lt;font color="#9696A5">%d&lt;/font></string>

    <string name="sort_newest">최신순</string>
    <string name="sort_alphabet">가나다순</string>
    <string name="sort_add">등록순</string>
    <string name="sub_chip_tag">태그 #</string>
    <string name="tag_choose_header">태그 선택</string>
    <string name="tag_choose_body">최대 3개까지 선택 가능해요.</string>
    <string name="tag_edit_header">태그 편집</string>
    <string name="tag_edit_body">드래그 해서 순서를 변경하고\n꾹 눌러 수정하거나 선택하여 삭제할 수 있어요.</string>
    <string name="tag_empty">태그별로 분류하여 쉽게 모아보세요!</string>
    <string name="tag_edit_text_add">태그 추가</string>
    <string name="tag_edit_text_edit">태그 수정</string>
    <string name="tag_place_holder">태그를 입력해주세요.</string>

    <string name="text_edit">편집</string>
    <string name="text_add_tag">+ 태그 추가</string>
    <string name="text_reset">초기화</string>
    <string name="text_finish">완료</string>
    <string name="text_choose">선택</string>
    <string name="text_ok">확인</string>
    <string name="text_cancel">취소</string>
    <string name="text_confirm">적용</string>
    <string name="text_delete">삭제</string>
    <string name="text_modification">수정</string>

    <!-- OMR 오류 -->
    <string name="omr_error_title">일시적인 오류입니다. 테스트를 다시 생성해주세요.</string>
    <string name="omr_error_temp_problem">임시 저장한 문제 목록 불러오기에 실패하였습니다.</string>
    <string name="omr_error_temp_answer">임시 저장한 답안 목록 불러오기에 실패하였습니다.</string>
    <string name="omr_error_result_answer">결과 불러오기에 실패하였습니다.</string>

</resources>