<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:background="@color/black">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="312dp"
            android:layout_height="179dp"
            android:background="@drawable/bg_radius8"
            android:backgroundTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:textColor="@color/theme_black"
                android:textSize="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/tag_edit_text_add" />

            <EditText
                android:id="@+id/etTag"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/bg_tag_edittext"
                android:hint="@string/tag_place_holder"
                android:paddingHorizontal="16dp"
                android:textColorHint="@color/theme_black_4"
                app:layout_constraintTop_toBottomOf="@id/tvHeader" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnCancel"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:background="@color/white"
                android:text="@string/text_cancel"
                android:textColor="@color/theme_black_1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btnOk"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnOk"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:background="@color/white"
                android:text="@string/text_ok"
                android:textColor="@color/theme_blue_1_m"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btnCancel" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>